--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
 	text-align: center;
 }
 
+div[data-key] {
+	margin: 2px;
+}
+
 footer {
 	background-color: #404040;
 	border-top: solid 2px #202020;
@@ -27,18 +31,24 @@ footer.shown {
 	bottom: 0px;
 }
 
-h2 {
-	text-align: center;
-	margin-bottom: 10px;
-}
-
 section {
 	background-color: #404040;
 	border-radius: 8px;
-	display: inline-block;
 	margin: 10px;
 	padding: 10px 20px;
 	text-align: left;
+}
+
+section h3 {
+	text-align: center;
+	margin-bottom: 8px;
+}
+
+section > div[id] {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	max-height: 400px;
 }
 
 #main {
