--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ footer.shown {
 section {
 	background-color: #404040;
 	border-radius: 8px;
+	display: inline-block;
 	margin: 10px;
 	padding: 10px 20px;
 	text-align: left;
