--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,29 @@ section > div[id] {
 	display: block;
 }
 
+#modalBG {
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.75);
+	bottom: 0;
+	display: none;
+	justify-content: center;
+	left: 0;
+	position: fixed;
+	right: 0;
+	top: 0;
+}
+
+#modalBG.show {
+	display: flex;
+}
+
+#modalBG #errorModal {
+	background-color: #404040;
+	border: solid 2px #202020;
+	border-radius: 10px;
+	padding: 10px;
+}
+
 #printout {
 	background-color: silver;
 	border-radius: 8px;
