--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,11 @@ section h2, section h3 {
 	text-align: center;
 }
 
+ul {
+	display: inline-block;
+	margin-left: 20px;
+}
+
 #modalBG {
 	align-items: center;
 	background-color: rgba(0, 0, 0, 0.75);
