Corrected error modal display.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,11 +49,11 @@ ul {
 }
 
 div.show {
-	display: block;
+	display: block !important;
 }
 
 #modalBG.show {
-	display: flex;
+	display: flex !important;
 }
 
 #modalBG #errorModal {
