--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
 	padding: 0;
 }
 
+li {
+	margin-left: 20px;
+}
+
 body {
 	background-color: #202020;
 	color: white;
@@ -33,7 +37,6 @@ section h2, section h3 {
 
 ul {
 	display: inline-block;
-	margin-left: 20px;
 }
 
 #modalBG {
