--- a/assets/css/gmscreen.css
+++ b/assets/css/gmscreen.css
@@ -48,6 +48,12 @@ h3 {
 	margin-top: 2px;
 }
 
+#npcManagement li, #playerManagement li {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
 #npcManagement li a, #playerManagement li a {
 	cursor: pointer;
 }
