--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,13 +107,17 @@ div.show {
 	width: 100%;
 }
 
+#eventPane .gmExtra button {
+	margin-left: 8px;
+}
+
 #eventPane .gmExtra > div {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
 
-#eventPane .gmExtra> div > div {
+#eventPane .gmExtra > div > div {
 	border: solid 1px #202020;
 	border-radius: 4px;
 	padding: 2px 8px;
