--- a/assets/css/rollplay.css
+++ b/assets/css/rollplay.css
@@ -50,6 +50,10 @@
 	flex-direction: column;
 }
 
+#rollingSection div:last-child {
+	margin: 8px 0px 0px 8px;
+}
+
 #rollControls {
 	align-items: center;
 	border: solid 1px #202020;
@@ -75,4 +79,74 @@
 
 .gmExtra, .gmInfo {
 	background-color: maroon !important;
+}
+
+@media screen and (max-width: 980px) {
+	#eventPane > div, .playersubordinate {
+		align-items: stretch;
+		flex-direction: column;
+	}
+
+	.playersubordinate {
+		margin-top: 4px;
+	}
+
+	.rollComment {
+		display: block;
+		margin-bottom: 4px;
+	}
+
+	.rollResult {
+		text-align: right;
+		margin-right: 4px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	#charInfo form {
+		grid-template-columns: 1fr 4fr;
+	}
+
+	#main {
+		flex-direction: column;
+		align-items: stretch;
+	}
+
+	#printout {
+		margin: 0 auto;
+		max-width: 300px;
+	}
+}
+
+@media screen and (max-width: 575px) {
+	button {
+		min-width: 60px;
+	}
+
+	button, input, select {
+		height: 30px;
+		padding: 6px;
+	}
+
+	#eventPane {
+		max-height: 300px;
+	}
+
+	#readOut {
+		padding: 10px;
+	}
+
+	#rollControls {
+		align-items: stretch;
+		flex-direction: column;
+	}
+
+	#rollingSection div:last-child {
+		margin: 0;
+		padding: 0;
+	}
+
+	#rollControls > div > div {
+		margin: 4px 0px 4px 4px !important;
+	}
 }
