--- a/assets/css/gmscreen.css
+++ b/assets/css/gmscreen.css
@@ -10,14 +10,29 @@ h3 {
 	min-width: 600px;
 }
 
+#encounterInfo > form {
+	align-items: center;
+	display: flex;
+}
+
+#encounterInfo > form div {
+	display: flex;
+	align-items: center;
+}
+
 #npcList, #playerList {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
 
+#npcList form, #playerList form {
+	display: flex;
+	margin-top: 8px;
+}
+
 #npcList input, #playerList input {
-	width: 75%;
+	flex-basis: 100%;
 }
 
 #npcManagement, #playerManagement {
@@ -49,13 +64,16 @@ h3 {
 }
 
 #npcManagement li div, #playerManagement li div {
+	align-items: flex-start;
 	display: flex;
-	flex-wrap: wrap;
+
 	justify-content: space-between;
+	width: 100%;
 }
 
 #npcManagement li a, #playerManagement li a {
 	cursor: pointer;
+	flex-basis: 100%;
 }
 
 #npcManagement li a:hover, #playerManagement li a:hover {
@@ -94,4 +112,74 @@ h3 {
 
 #rollPanel > div > div > div > div {
 	margin: 0 4px 4px 4px;
+}
+
+@media screen and (max-width: 1100px) {
+	#encounterInfo {
+		min-width: initial;
+	}
+
+	#encounterInfo > form {
+		justify-content: center;
+	}
+
+	#main {
+		flex-wrap: wrap;
+	}
+
+	#main > * {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 640px) {
+	#npcManagement, #playerManagement {
+		align-items: center;
+		flex-direction: column;
+	}
+
+	#npcManagement > div:first-child, #playerManagement > div:first-child {
+		margin-bottom: 8px;
+		width: 100%;
+	}
+
+	#npcManagement > div:last-child, #playerManagement > div:last-child {
+		margin-left: 0px;
+		max-width: 300px;
+	}
+
+	#rollPanel > div > div:nth-child(3) {
+		flex-direction: column;
+	}
+
+	#rollPanel > div > div + div {
+		margin-top: 8px;
+	}
+}
+
+@media screen and (max-width: 575px) {
+	#encounterInfo > form {
+		flex-direction: column;
+	}
+
+	#encounterInfo > form div {
+		margin-bottom: 4px;
+	}
+
+	/* Override font size from style.css */
+	#npcCurForm label {
+		font-size: medium !important;
+	}
+
+	.flexMe {
+		flex-direction: column;
+	}
+
+	#rollPanel input {
+		margin-left: 0px;
+	}
+
+	#rollPanel > div > div:last-child > div > div {
+		margin-top: 8px;
+	}
 }
