--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ div.show {
 }
 
 #eventPane {
+	counter-reset: event;
 	margin-right: -20px;
 	padding-right: 20px;
 	max-height: 600px;
@@ -132,7 +133,21 @@ div.show {
 	justify-content: space-between;
 	margin: 2px;
 	padding: 8px;
+	position: relative;
 	width: 100%;
+}
+
+#eventPane > *[countMe] > *:first-child {
+	margin-left: 20px;
+}
+
+#eventPane > *[countMe]::before {
+	color: rgba(255, 255, 255, 0.5);
+	counter-increment: event;
+	content: counter(event);
+	position: absolute;
+	top: 8px;
+	left: 2px;
 }
 
 #eventPane p {
