--- a/assets/css/gmscreen.css
+++ b/assets/css/gmscreen.css
@@ -114,6 +114,15 @@ h3 {
 	margin: 0 4px 4px 4px;
 }
 
+#commentArea > div {
+	border: none !important;
+	text-align: center;
+}
+
+#commentArea textarea {
+	width: 100%;
+}
+
 @media screen and (max-width: 1100px) {
 	#encounterInfo {
 		min-width: initial;
