--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -18,7 +18,7 @@ select {
 
 #profileText > div {
 	background-color: #f0f0f0;
-	border: solid 2px #202020;
+	border: solid 2px var(--content-border);
 	border-radius: 8px;
 	color: black;
 	font-family: Arial, Helvetica, sans-serif;
