Roll events will now show lucky/unlucky.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,11 +277,11 @@ ul {
 	text-align: left;
 }
 
-.damageResist {
+.damageResist, .luckyRoll {
 	color: var(--common-green);
 }
 
-.damageWeakness {
+.damageWeakness, .unluckyRoll {
 	color: var(--common-red);
 }
 
